--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
+    <meta http-equiv="refresh" content="0; url=main.html" />
+    <title>Redirecting...</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio Hafiz</title>
@@ -34,6 +36,7 @@
     </style>
   </head>
   <body>
+    <p>Jika Anda tidak dialihkan, <a href="main.html">klik di sini</a>.</p>
     <header>
       <h1>Portofolio Hafiz</h1>
     </header>
